--- a/.github/workflows/phoenix.yml
+++ b/.github/workflows/phoenix.yml
@@ -5,21 +5,25 @@ jobs:
   test:
     runs-on: ubuntu-latest
 
-#    services:
-#      db:
-#        image: postgres:11
-#        ports: ['5432:5432']
-#        options: >-
-#          --health-cmd pg_isready
-#          --health-interval 30s
-#          --health-timeout 5s
-#          --health-retries 5
+    services:
+      db:
+        image: postgres:11
+        env:
+          POSTGRES_USER: postgres
+          POSTGRES_PASSWORD: postgres
+          POSTGRES_DB: cookpod_test
+        ports: ['5432:5432']
+        options: >-
+          --health-cmd pg_isready
+          --health-interval 30s
+          --health-timeout 5s
+          --health-retries 5
 
     steps:
       - uses: actions/checkout@v2
       - uses: actions/setup-elixir@v1
         with:
           otp-version: 22.2
-          elixir-version: 1.9.4
+          elixir-version: 1.10.2
       - run: mix deps.get
       - run: mix test
