--- a/.github/workflows/codecov.yml
+++ b/.github/workflows/codecov.yml
@@ -2,8 +2,9 @@ name: coverage
 on: push
 
 jobs:
-  steps:
-    - uses: actions/checkout@master
-    - uses: codecov/codecov-action@v1
-      with:
-        fail_ci_if_error: true # optional (default = false)
+  coverage:
+    steps:
+      - uses: actions/checkout@master
+      - uses: codecov/codecov-action@v1
+        with:
+          fail_ci_if_error: true # optional (default = false)
