fix ga coverage config && add badge to coverage

--- a/.github/workflows/codecov.yml
+++ b/.github/workflows/codecov.yml
@@ -3,6 +3,8 @@ on: push
 
 jobs:
   coverage:
+    runs-on: ubuntu-latest
+
     steps:
       - uses: actions/checkout@master
       - uses: codecov/codecov-action@v1
