--- a/.github/workflows/codecov.yml
+++ b/.github/workflows/codecov.yml
@@ -15,4 +15,4 @@ jobs:
       - run: mix coveralls.github
       - uses: codecov/codecov-action@v1
         with:
-          fail_ci_if_error: true # optional (default = false)
+          fail_ci_if_error: false
