--- a/.github/workflows/codecov.yml
+++ b/.github/workflows/codecov.yml
@@ -12,7 +12,7 @@ jobs:
           otp-version: 22.2
           elixir-version: 1.10.2
       - run: mix deps.get
-      - run: mix coveralls.github
+      - run: mix coveralls.xml
       - uses: codecov/codecov-action@v1
         with:
           fail_ci_if_error: false
