--- a/.github/workflows/codecov.yml
+++ b/.github/workflows/codecov.yml
@@ -4,7 +4,8 @@ on: push
 jobs:
   coverage:
     runs-on: ubuntu-latest
-
+    env:
+      MIX_ENV: test
     steps:
       - uses: actions/checkout@v2
       - uses: actions/setup-elixir@v1
@@ -12,7 +13,7 @@ jobs:
           otp-version: 22.2
           elixir-version: 1.10.2
       - run: mix deps.get
-      - run: mix coveralls.xml
+      - run: mix coveralls.github
       - uses: codecov/codecov-action@v1
         with:
           fail_ci_if_error: false
