--- a/.github/workflows/phoenix.yml
+++ b/.github/workflows/phoenix.yml
@@ -4,7 +4,9 @@ on: push
 jobs:
   test:
     runs-on: ubuntu-latest
-
+    env:
+      MIX_ENV: test
+      GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
     services:
       db:
         image: postgres:11
@@ -27,3 +29,7 @@ jobs:
           elixir-version: 1.10.2
       - run: mix deps.get
       - run: mix test
+      - run: mix coveralls.github
+      - uses: codecov/codecov-action@v1
+        with:
+          fail_ci_if_error: false
